# convex-panel

./: .gitignore  .npmrc  CONTRIBUTING.md  DESKTOP_FILES_VIEW_GUIDE.md  LICENSE  README.md  endpoints.md  fix_all_imports.py  install.ps1  install.sh  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json  turbo.json
.cursor/rules/: npm_package_rules.mdc
.github/workflows/: build-desktop.yml
.opencode/plan/: plan.md
.turbo/cache/: 1d349c4405325a0e-meta.json  1d349c4405325a0e.tar.zst  20125c6b1c8d74c9-meta.json  20125c6b1c8d74c9.tar.zst  32dd49760e61fe49-meta.json  32dd49760e61fe49.tar.zst  3c3636ffe0a9d118-meta.json  3c3636ffe0a9d118.tar.zst  7803e5e04ca499d1-meta.json  7803e5e04ca499d1.tar.zst  80cf628815f46a4e-meta.json  80cf628815f46a4e.tar.zst  b80651e565469229-meta.json  b80651e565469229.tar.zst  bb4faaad7d3804e5-meta.json  bb4faaad7d3804e5.tar.zst  cdd3e4dc0e2aa3e7-meta.json  cdd3e4dc0e2aa3e7.tar.zst  db567aeac0a1bd93-meta.json  db567aeac0a1bd93.tar.zst  df5ba2f6d35df386-meta.json  df5ba2f6d35df386.tar.zst  e1d9440e6e672097-meta.json  e1d9440e6e672097.tar.zst  e3cd1f222b933e6b-meta.json  e3cd1f222b933e6b.tar.zst  f2dbfe14a88e3af0-meta.json  f2dbfe14a88e3af0.tar.zst
apps/api/: README.md  package.json  server.js  wrangler.toml
apps/chrome-extension/: package.json
apps/convex-backend-main/: api-catalog.md  component-function-fetching-fix.md  component-function-fetching.md  endpoints-catalog.md  get-functions-and-components.md  table-schema-and-column-management.md
apps/desktop/: .gitignore  CODE_SIGNING.md  MAC_APP_STORE_READINESS.md  PRODUCTION_BUILD.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1767789164574-b55df3f0d06fd.mjs  vite.config.ts.timestamp-1768948634523-212e7692d51bc.mjs
apps/desktop/src-tauri/: Cargo.toml  about.html  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  mcp_server.rs  notifications.rs  pty.rs  secure_store.rs
apps/desktop/src-tauri/src/log_store/: commands.rs  db.rs  mod.rs  models.rs  retention.rs  utils.rs
apps/dev-server/: Dockerfile  README.md  fly.toml  package.json  server.js
apps/edge-extension/: package.json  tsconfig.json  vite.config.ts
apps/firefox-extension/: package.json
apps/mobile/: .eslintrc.js  .gitignore  ARCHITECTURE.md  BUILD.md  README.md  STORE_READINESS.md  analyze-bundle.sh  app.json  babel.config.js  eas.json  metro-resolve-patch.js  metro.config.js  metro.config.js.backup  package.json  start-expo.js  tsconfig.json
apps/mobile-subscriptions/: .env.example  README.md  SETUP_SHARED_SECRET.md  package.json  tsconfig.json
apps/nextjs-web/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/raycast/: CHANGELOG.md  README.md  package.json  raycast-env.d.ts
apps/svelte-web/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/vue-web/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
convex/: crons.ts  tsconfig.json
dev/: App.tsx  ENV_SETUP.md  README.md  TodoApp.tsx  index.html  server.js  vite-env.d.ts
src/: ConvexPanel.tsx  index.ts
src/components/: ask-ai.tsx  auth-panel.tsx  bottom-sheet.tsx  main-view.tsx
src/contexts/: index.ts
src/hooks/: index.ts  useFunctionEditor.tsx  useGlobalLocalStorage.ts  useOAuth.ts  useTableData.ts
src/lib/: functionRunner.ts
src/styles/: panelStyles.ts
src/types/: index.d.ts  tabs.ts
src/utils/: adminClient.ts  api.ts  constants.ts  (+5 more)
wiki/: Troubleshooting.md  _Sidebar.md
(+984 files in other folders)
