[package]
name = "convex-panel-desktop"
version = "0.1.0"
description = "Desktop application for Convex Panel"
authors = ["Robert Alvarez"]
edition = "2021"

[lib]
name = "convex_panel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "convex-panel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
keyring = "2.3.2"

# MCP Server dependencies
axum = "0.7"
tokio = { version = "1", features = ["full", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# PTY (pseudo-terminal) support
portable-pty = "0.8"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
