[package]
name = "convex-panel-desktop"
version = "0.1.0"
description = "Desktop application for Convex Panel"
authors = ["Robert Alvarez"]
edition = "2021"

[lib]
name = "convex_panel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "convex-panel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"

# Encryption for secure storage (instead of keychain)
aes-gcm = "0.10"
sha2 = "0.10"
machine-uid = "0.5"

# Shared utilities
once_cell = "1"
walkdir = "2"
parking_lot = "0.12"

# PTY (pseudo-terminal) support
portable-pty = "0.8"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow"] }
