[package]
name = "convex-panel-desktop"
version = "0.3.18"
description = "Desktop application for Convex Panel"
authors = ["Robert Alvarez"]
edition = "2021"

[lib]
name = "convex_panel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "convex-panel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }

# Encryption for secure storage (instead of keychain)
aes-gcm = "0.10"
sha2 = "0.10"
machine-uid = "0.5"

# Shared utilities
once_cell = "1"
walkdir = "2"
parking_lot = "0.12"

# PTY (pseudo-terminal) support
portable-pty = "0.8"

# SQLite log storage
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow", "NSApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSDictionary", "NSData"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
